tests/symlink/symlink.exp
Error: qux.js:2
  2: ({ x: "" }: Foo);
      ^^^^^^^^^ object literal. This type is incompatible with
  2: ({ x: "" }: Foo);
                 ^^^ object type
  Property `x` is incompatible:
      2: ({ x: "" }: Foo);
               ^^ string. This type is incompatible with
      1: export type Foo = { x: number; }
                                ^^^^^^ number. See: foo.js:1


Found 1 error
